redact-pdf/MinIO/minio-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio-service
  namespace: anonymus
spec:
  selector:
    app: minio
  ports:
    - name: api
      port: 9000
      targetPort: 9000
    - name: console
      port: 9001
      targetPort: 9001
  type: ClusterIP
